# simple-ci

./: README.md  client.sh  config.nix  default.nix  simple-ci.cabal
src/: Main.hs
