name:                simple-ci
version:             1.0.0
license:             BSD3
build-type:          Simple
cabal-version:       >= 2.0

executable simple-ci
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , servant
                     , servant-server
                     , text
                     , wai
                     , wai-extra
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
